[package]
name = "xmc1100-hal"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

description   = "Hardware Abstraction Layer (HAL) for the XMC1100 series of ARM Cortex-M+ microcontroller"
documentation = "https://docs.rs/xmc1100-hal"
repository    = "https://github.com/david-sawatzke/xmc1100-hal"
license       = "MIT/Apache-2.0"
readme        = "README.md"
keywords      = ["arm", "cortex-m", "xmc", "embedded-hal-impl"]
categories    = ["embedded", "hardware-support", "no-std"]

[dependencies]
xmc1100 = {version = "0.1.0", features = ["rt"]}
bare-metal = { version = "0.2.4", features = ["const-fn"] }
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
nb = "0.1.1"
void = { version = "1.0.2", default-features = false }
cast = { version = "0.2.2", default-features = false }

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[dev-dependencies]
panic-halt = "0.2.0"

[build-dependencies]
cc = "1.0.25"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
